--- a/inst/tuftesque.css
+++ b/inst/tuftesque.css
@@ -94,7 +94,7 @@ img {
 /* Stretch a plot across the whole width of the screen */
 .full-width-plot img {
   width: 100vw;
-  /* Need to figure out where the middle of the body column is to know where to place left side of image */
+  max-width: 100vw;
   margin-left: calc(0px - var(--body-padding) - var(--left-gutter));
 }
 
@@ -199,7 +199,7 @@ img {
   }
 
   .full-width-plot img {
-    margin: 0 calc(50% - 50vw);
+     margin: 0 calc(-50vw + 50%);
   }
 
 }
@@ -215,7 +215,7 @@ img {
   content: '';
   position: absolute;
   left: -10vw;
-  right: -10vw;
+  right: 0;
   margin-top: 2em;
   height: 2px;
   background-color: black;
