--- a/inst/tuftesque.css
+++ b/inst/tuftesque.css
@@ -237,3 +237,24 @@ img,
   background-repeat: no-repeat;
 }
 
+
+.lightbox.selected {
+
+	/** Position and style */
+	position: fixed;
+	z-index: 999;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+}
+
+.lightbox.selected img {
+	/** Pad the lightbox image */
+	min-width: 50%;
+	max-width: 90%;
+	max-height: 80%;
+	margin-top: 2%;
+}
