--- a/inst/tuftesque.css
+++ b/inst/tuftesque.css
@@ -109,6 +109,36 @@ img,
   margin-left: calc(0px - var(--left-gutter));
 }
 
+
+/* Lightboxed images and plots */
+
+.lightbox.selected {
+	/** Position and style */
+	position: fixed;
+	z-index: 999;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+}
+
+.lightbox.selected img {
+	/** Pad the lightbox image */
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: auto;
+    max-height: 90%;
+    height: auto;
+    max-width: 90%;
+}
+
+
 /* Styles for when viewing on mobile */
 /* --------------------------------*/
 
@@ -133,7 +163,7 @@ img,
     overflow-y: hidden;
     -webkit-transition: max-height var(--animation-duration) ease-in-out;
     transition: max-height var(--animation-duration) ease-in-out,
-      background-color var(--animation-duration) ease-in-out;
+                background-color var(--animation-duration) ease-in-out;
   }
 
   /* Side notes with images need to have everything centered using grid */
@@ -178,6 +208,14 @@ img,
   .side-note::before {
     top: 0;
     position: absolute;
+  }
+
+  .side-note .lightbox {
+     margin-top: var(--expand-button-diameter);
+  }
+
+  .side-note .lightbox.selected {
+     margin-top: 0;
   }
 
   /* Interaction/ Animation logic */
@@ -228,7 +266,6 @@ img,
   background: url("data:image/svg+xml;charset=UTF-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='1rem' height='1rem' fill='none' stroke='currentcolor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'> <path d='M22 11 C22 16 19 20 16 20 13 20 10 16 10 11 10 6 12 3 16 3 20 3 22 6 22 11 Z M4 30 L28 30 C28 21 22 20 16 20 10 20 4 21 4 30 Z'/></svg>");
   background-position: center;
   background-repeat: no-repeat;
-
 }
 
 .intro .date::before {
@@ -238,29 +275,3 @@ img,
 }
 
 
-.lightbox.selected {
-
-	/** Position and style */
-	position: fixed;
-	z-index: 999;
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	top: 0;
-	left: 0;
-	background: rgba(0,0,0,0.8);
-}
-
-.lightbox.selected img {
-	/** Pad the lightbox image */
-    margin: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: auto;
-    max-height: 90%;
-    height: auto;
-    max-width: 90%;
-}
