--- a/inst/tuftesque.css
+++ b/inst/tuftesque.css
@@ -2,9 +2,9 @@
 
 /* Global CSS variables that control appearance */
 * {
-  --left-gutter: 5vw;
-  --right-gutter: 28vw;
-  --mobile-gutter: 5vw;
+  --max-page-width: 1100px;
+  --content-width-prop: 75%;
+  --page-side-padding: 0.5rem;
   --expand-button-diameter: 2rem;
   --animation-duration: 500ms;
   --page-color: #fffaec;
@@ -21,13 +21,44 @@
 
 /* Hide the horizontal scroll bars caused by elements spilling over sides */
 body {
-  overflow-x: hidden;
   font-size: 14px;
   font-family: "Quicksand", sans-serif;
-  max-width: 100vw;
-  margin: 0;
   background-color: var(--page-color);
+  overflow-x: hidden;
   color: var(text-color);
+}
+
+/* ============ Main layout logic ============== */
+
+
+
+.all_content {
+  position: relative;
+  max-width: var(--max-page-width) ;
+  margin-left: auto;
+  margin-right: auto;
+/*   background-color: green; */
+}
+
+/* The main body of the document */
+.container {
+  width: var(--content-width-prop);
+  margin-top: .5rem;
+  padding-left: var(--page-side-padding);
+/*   background-color: steelblue; */
+}
+
+/* Side note styles*/
+/* When viewing on a large screen stick sidenotes on... the side! */
+/* Fonts are lighter and slanty to indicate they're different from the rest */
+.side-note {
+  position: absolute;
+  left: var(--content-width-prop);
+  right: 0;
+  font-style: oblique;
+  font-weight: lighter;
+  padding: 0.5rem;
+/*   background-color: orangered; */
 }
 
 h1,
@@ -51,24 +82,7 @@ h3 {
   padding-top: 15px;
 }
 
-/* The main body of the document */
-.container {
-  margin-left: var(--left-gutter);
-  margin-right: var(--right-gutter);
-  position: relative;
-}
 
-/* Side note styles*/
-/* When viewing on a large screen stick sidenotes on... the side! */
-/* Fonts are lighter and slanty to indicate they're different from the rest */
-.side-note {
-  position: absolute;
-  left: 100%;
-  width: var(--right-gutter);
-  font-style: oblique;
-  font-weight: lighter;
-  padding: 0.5rem;
-}
 
 /* Add a small vertical line to the left of the code output */
 pre {
@@ -83,7 +97,7 @@ pre {
 pre.r::before {
   content: "R";
   position: absolute;
-  right: 0;
+  right: calc(100% - var(--content-width-prop));
   margin-top: -0.5rem;
   padding-right: 5px;
   font-size: 1.5rem;
@@ -93,8 +107,8 @@ pre.r::before {
 }
 
 
-/* Plots and images are sized here */
-/* --------------------------------*/
+/* ============ Plots and images ============ */
+/* ========================================== */
 
 /* Don't let images spill out of the main body */
 img,
@@ -106,7 +120,7 @@ img,
 .full-width-plot img {
   width: 100vw;
   max-width: 100vw;
-  margin-left: calc(0px - var(--left-gutter));
+  margin-left: calc(((100% / 0.75) / 2) - 50vw)
 }
 
 
@@ -143,12 +157,14 @@ img,
 /* --------------------------------*/
 
 @media (max-width: 600px) {
-  /* Main body now is evenly placed in center*/
+
+
+  /* The main body of the document */
   .container {
-    margin-left: var(--mobile-gutter);
-    margin-right: var(--mobile-gutter);
-    width: calc(100vw - 2*var(--mobile-gutter));
+    width: 100%
+    padding-right: var(--page-side-padding);
   }
+
 
   /* Side notes fall inline instead of on side */
   .side-note {
@@ -232,6 +248,11 @@ img,
 
   .full-width-plot img {
     margin: 0 calc(-50vw + 50%);
+  }
+
+
+  pre.r::before {
+    right: 0;
   }
 }
 
