Added styles for figure captions that markdown likes to automatically include.

--- a/inst/tuftesque.css
+++ b/inst/tuftesque.css
@@ -296,3 +296,16 @@ img,
 }
 
 
+
+/* ============================================================================================ */
+/* Figure caption style
+/* ============================================================================================ */
+.caption {
+  margin-top: 0;
+  font-style: oblique;
+}
+.caption::before {
+  content: '';
+  border: 1px solid grey;
+  margin-right: 0.25em;
+}
