Fixed the figure-in-sidenote-before-anything-else issue by adding some margin to the top.

--- a/inst/tuftesque.css
+++ b/inst/tuftesque.css
@@ -188,6 +188,10 @@ img,
     justify-content: center;
   }
 
+  .side-note .figure {
+    margin-top: calc(var(--expand-button-diameter)/2 + 5px);
+  }
+
   span.side-note {
     padding-top: var(--expand-button-diameter);
     padding-bottom: 0px;
